--- a/package.json
+++ b/package.json
@@ -9,16 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fontsource/barlow": "^5.0.5",
     "@prisma/client": "5.0.0",
     "@t3-oss/env-nextjs": "^0.6.0",
     "@tanstack/react-query": "^4.32.0",
     "@trpc/client": "^10.36.0",
     "@trpc/next": "^10.36.0",
     "@trpc/server": "^10.36.0",
+    "framer-motion": "^10.15.0",
+    "grapheme-splitter": "^1.0.4",
     "next": "13.4.12",
     "next-plausible": "^3.10.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
     "superjson": "^1.13.1",
     "zod": "^3.21.4"
   },
@@ -32,6 +33,8 @@
     "eslint-config-next": "13.4.12",
     "postcss": "8.4.27",
     "prisma": "^5.0.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   }
