--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@trpc/server": "^10.36.0",
     "framer-motion": "^10.15.0",
     "grapheme-splitter": "^1.0.4",
+    "lucide-react": "^0.263.1",
     "next": "13.4.12",
     "next-plausible": "^3.10.1",
     "superjson": "^1.13.1",
