--- a/package.json
+++ b/package.json
@@ -11,16 +11,24 @@
   "dependencies": {
     "@fontsource/barlow": "^5.0.5",
     "@prisma/client": "5.0.0",
+    "@radix-ui/react-navigation-menu": "^1.1.3",
+    "@radix-ui/react-slot": "^1.0.2",
     "@t3-oss/env-nextjs": "^0.6.0",
     "@tanstack/react-query": "^4.32.0",
     "@trpc/client": "^10.36.0",
     "@trpc/next": "^10.36.0",
     "@trpc/server": "^10.36.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "framer-motion": "^10.15.0",
     "grapheme-splitter": "^1.0.4",
+    "jotai": "^2.2.3",
+    "lucide-react": "^0.263.1",
     "next": "13.4.12",
     "next-plausible": "^3.10.1",
     "superjson": "^1.13.1",
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss-animate": "^1.0.6",
     "zod": "^3.21.4"
   },
   "devDependencies": {
