--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tanstack/react-query": "^4.32.0",
     "@trpc/client": "^10.36.0",
     "@trpc/next": "^10.36.0",
+    "@trpc/react-query": "^10.36.0",
     "@trpc/server": "^10.36.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
